# Vimi

./: .dockerignore  .gitignore  README.md  angular.json  docker-compose.yml  eslint.config.mjs  jwt_signing_private_key.pem  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.run/: API - Activation By Layer.run.xml  API - Activation By Processed Layer.run.xml  API - Activation Compare.run.xml  API - Activation Input Transformation All.run.xml  API - Activation Normalization All.run.xml  API - Architecture All.run.xml  API - Architecture Processed All.run.xml  API - Architecture Processed Layer.run.xml  API - Color Map All.run.xml  API - Color Map Indicator.run.xml  API - Color Map Normalization All.run.xml  API - Layers By Processed Architecture.run.xml  API - Network Input By Processed Layer.run.xml  API - Network Input Process.run.xml  API - Network Input Transformation All.run.xml  API - Network Input Upload.run.xml  API - Process Network Input.run.xml  API - Texture Normalization All.run.xml  API - Texture.run.xml  API - Upload Network Input.run.xml  Authentication - Log In User.run.xml  Backend.run.xml  (+26 more)
backend/: Dockerfile  README.md  backend.Dockerfile  backend.env  pyproject.toml  pytest.ini  requirements.txt  setup.py  worker.Dockerfile
backend/fixtures/: initial_data.json
backend/scripts/: run_backend.sh  setup.python.sh
backend/src/backend/: app.py  models.py
backend/src/backend/exceptions/: file_operations.py  model.py
backend/src/vimi_lib/: models.py
backend/src/vimi_lib/crypto/: rsa_key_generator.py  rsa_key_reader.py
backend/src/vimi_lib/data/: arr.py
backend/src/vimi_lib/exceptions/: model_not_loaded.py
backend/src/vimi_lib/utils/: singleton.py
backend/src/vimi_web/: manage.py
backend/src/vimi_web/api/: admin.py  apps.py  authentication.py  fields.py  middleware.py  models.py  renderers.py  serializers.py  storages.py  urls.py  validators.py  views.py
backend/src/vimi_web/api/management/commands/: sync_architecture.py  sync_color_map.py  sync_layer.py  syncarchitecture.py
backend/src/vimi_web/auth/: authentication.py  settings.py  tests.py  tokens.py  urls.py  views.py
backend/src/vimi_web/authentication/: apps.py  models.py  serializers.py  settings.py  urls.py  validators.py  views.py
backend/src/vimi_web/authentication/settings/: development.py  testing.py
backend/src/vimi_web/config/: apps.py  urls.py  views.py
backend/src/vimi_web/core/: asgi.py  middleware.py  model.py  settings.py  urls.py  wsgi.py
backend/src/vimi_web/core/settings/: development.py  testing.py
backend/src/vimi_web/logic/: settings.py
backend/src/vimi_web/worker/: apps.py  models.py  tasks.py  urls.py  views.py
backend/src/vimi_worker/: app.py
backend/src/vimi_worker/commands/: client.py  command.py  register.py  run.py
backend/test/vimi_lib/crypto/: test_ed25519_key_reader.py
backend/test/vimi_lib/data/: test_arr.py
backend/test/vimi_web/api/models/: test_color_map.py
(+302 files in other folders)
